--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -7,7 +7,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
   }
   
   .main-content {
