--- a/src/Components/TopBar.css
+++ b/src/Components/TopBar.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #2d3748;
-    padding: 10px 20px;
+    padding: 10px 40px;
     color: white;
     height: 60px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -24,6 +24,7 @@
   .profile-button {
     background: none;
     border: none;
+    right:50px;
     font-size: 1.5rem;
     cursor: pointer;
     color: white;
